--- a/test.html
+++ b/test.html
@@ -2,7 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>hoge</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body></body>
+  <body>
+    <section class="level1" aria-labelledby="hoge">
+      <h1 id="hoge">hoge</h1>
+    </section>
+  </body>
 </html>
