--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
   <body>
     <section class="level1" aria-labelledby="hoge">
       <h1 id="hoge">hoge</h1>
+      <p>aaa <a id="fnref1" href="#fn1" class="footnote-ref" role="doc-noteref"><sup>1</sup></a>: hogehoge</p>
     </section>
   </body>
 </html>
