--- a/test.html
+++ b/test.html
@@ -8,7 +8,13 @@
   <body>
     <section class="level1" aria-labelledby="hoge">
       <h1 id="hoge">hoge</h1>
-      <p>aaa <a id="fnref1" href="#fn1" class="footnote-ref" role="doc-noteref"><sup>1</sup></a>: hogehoge</p>
+      <p>これは本文です<a id="fnref1" href="#fn1" class="footnote-ref" role="doc-noteref"><sup>1</sup></a>。</p>
+    </section>
+    <section class="footnotes" role="doc-endnotes">
+      <hr>
+      <ol>
+        <li id="fn1" role="doc-endnote">これは脚注の内容です。<a href="#fnref1" class="footnote-back" role="doc-backlink">↩</a></li>
+      </ol>
     </section>
   </body>
 </html>
